AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	autotimer \
	browser \
	callmonitor1 \
	catcatch \
	dlna \
	dvdplayer \
	facebook \
	filemanager \
	gmediarender \
	hello \
	imdb \
	imdbapi \
	instar \
	keylock \
	kravencfg \
	lcdpearl1 \
	lcdsamsung \
	mboxinfo \
	mc \
	networkbrowser \
	optimize \
	panel \
	permtime \
	readerconfig \
	rgui \
	scriptexec \
	stock \
	stopifnotused \
	streaminfo \
	sudoku \
	tinews \
	tithek \
	tiwakeup \
	tsSchnitt \
	tmc \
	tmdb \
	TopfieldVFD \
	usbreset \
	weather \
	wins3 \
	wm2014 \
	xupnpd \
	zapback
