AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
    browser_netsurf \
    \
    games_catcatch \
    games_sudoku \
    games_wins3 \
    \
    gui_e2starter \
    gui_kodistarter \
    \
    infos_imdb \
    infos_imdbapi \
    infos_mboxinfo \
    infos_stock \
    infos_streaminfo \
    infos_tmdb \
    infos_tinews \
    infos_weather \
    infos_wm2018 \
    \
    network_dlna \
    network_facebook \
    network_ipsec \
    network_minisatip \
    network_networkbrowser \
    network_satipclient \
    network_xupnpd \
    \
    player_dvdplayer \
    player_gmediarender \
    player_mc \
    player_tithek \
    player_tmc \
    \
    tools_autotimer \
    tools_callmonitor1 \
    tools_filemanager \
    tools_hello \
    tools_instar \
    tools_keylock \
    tools_kravencfg \
    tools_lcdpearl1 \
    tools_lcdsamsung \
    tools_multiimage \
    tools_optimize \
    tools_panel \
    tools_permtime \
    tools_readerconfig \
    tools_rgui \
    tools_scriptexec \
    tools_sispmctl \
    tools_stopifnotused \
    tools_tiwakeup \
    tools_TopfieldVFD \
    tools_tsSchnitt \
    tools_usbreset \
    tools_wlandisplay \
    tools_zapback

