AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	autotimer \
	catcatch \
	dlna \
	facebook \
	gmediarender \
	hello \
	imdb \
	imdbapi \
	instar \
	keylock \
	lcdpearl1 \
	lcdsamsung \
	mboxinfo \
	networkbrowser \
	optimize \
	permtime \
	rgui \
	scriptexec \
	stock \
	stopifnotused \
	streaminfo \
	tinews \
	tsSchnitt \
	tmdb \
	TopfieldVFD \
	usbreset \
	weather \
	wins3 \
	zapback