AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	autotimer \
	catcatch \
	dlna \
	gmediarender \
	hello \
	imdb \
	imdbapi \
	keylock \
	lcdpearl1 \
	lcdsamsung \
	mboxinfo \
	networkbrowser \
	optimize \
	permtime \
	rgui \
	scriptexec \
	stock \
	streaminfo \
	tinews \
	tsSchnitt \
	tmdb \
	TopfieldVFD \
	usbreset \
	weather \
	wins3 \
	zapback