AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	autotimer \
	browser \
	callmonitor1 \
	catcatch \
	dlna \
	dvdplayer \
	e2starter \
	facebook \
	filemanager \
	gmediarender \
	hello \
	imdb \
	imdbapi \
	instar \
	ipsec \
	keylock \
	kodistarter \
	kravencfg \
	lcdpearl1 \
	lcdsamsung \
	mboxinfo \
	mc \
	minisatip \
	multiimage \
	networkbrowser \
	optimize \
	panel \
	permtime \
	readerconfig \
	rgui \
	satipclient \
	scriptexec \
	sispmctl \
	stock \
	stopifnotused \
	streaminfo \
	sudoku \
	tinews \
	tithek \
	tiwakeup \
	tsSchnitt \
	tmc \
	tmdb \
	TopfieldVFD \
	usbreset \
	weather \
	wins3 \
	wlandisplay \
	wm2018 \
	xupnpd \
	zapback \
    info
