noinst_LTLIBRARIES = libnetscan.la

libnetscan_la_SOURCES = \
	errors.h \
	list.c \
	list.h \
	main.c \
	nbtscan.c \
	nbtscan.h \
	range.c \
	range.h \
	showmount.c \
	showmount.h \
	smb.h \
	smbinfo.c \
	smbinfo.h \
	statusq.c \
	statusq.h \
	time_compat.h

libnetscan_la_LDFLAGS = \
	$(PLUGIN_LIBTOOL_FLAGS)
