lib_LTLIBRARIES = libautotimer.la
libautotimer_la_SOURCES = autotimer.c

AM_CPPFLAGS = -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE
ALL_CFLAGS= -DSH4 -Deplayer3 -DDVDPLAYER -Os -export-dynamic -Wall -I../../../tufsbox/cdkroot/usr/include/freetype21

CFLAGS = -I../../../tufsbox/cdkroot/usr/include/freetype2

#CPPFLAGS
#CXXFLAGS