SUBDIRS = \
    autotimer \
    betarobot \
    callmonitor1 \
    filemanager \
    hello \
    instar \
    keylock \
    kravencfg \
    lcdpearl1 \
    lcdsamsung \
    multiimage \
    optimize \
    panel \
    permtime \
    readerconfig \
    rgui \
    scriptexec \
    sispmctl \
    stopifnotused \
    tiwakeup \
    TopfieldVFD \
    tsSchnitt \
    usbreset \
    wlandisplay \
    zapback

