SUBDIRS = \
    autotimer \
    callmonitor1 \
    filemanager \
    hello \
    instar \
    keylock \
    kravencfg \
    lcdpearl1 \
    lcdsamsung \
    multiimage \
    optimize \
    panel \
    permtime \
    readerconfig \
    rgui \
    scriptexec \
    sispmctl \
    stopifnotused \
    tiwakeup \
    TopfieldVFD \
    tsschnitt \
    usbreset \
    wlandisplay \
    zapback

